[metadata]
name = coguard-cli
version = 0.2.6
author = Heinle Solutions Inc.
author_email = albert@coguard.io
description = A command line interface for scanning configuration files with CoGuard
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coguardio/coguard-cli
project_urls =
    Bug Tracker = https://github.com/coguardio/coguard-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    setuptools
    jwt
    pyyaml
    flatten-dict
    python-hcl2
    boto3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
                coguard = coguard_cli.__main__:main