[metadata]
name = coguard-cli
version = 0.2.25
author = Heinle Solutions Inc.
author_email = albert@coguard.io
description = A command line interface for scanning configuration files with CoGuard
long_description = file: README_PYPI.md
long_description_content_type = text/markdown
url = https://github.com/coguardio/coguard-cli
project_urls =
    Bug Tracker = https://github.com/coguardio/coguard-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests
    setuptools
    jwt
    pyyaml
    flatten-dict
    python-hcl2
    boto3
    cfn-flip

[options.package_data]
coguard_cli =
    discovery/cloud_discovery/terraformer_extract_image_helper/**
    ci_cd/ci_cd_scripts/**


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
                coguard = coguard_cli.__main__:main
                coguard-coverity-translator = coverity_integration.src.coguard_coverity_translator.__main__:main